# gitoxide

gix-protocol/: Cargo.toml
gix-protocol/src/serve/upload_pack/: function.rs  mod.rs  want_haves.rs
gix-protocol/tests/: blocking-server.rs
gix-serve/: Cargo.toml
gix-serve/src/: lib.rs  serve.rs
gix-serve/tests/: upload_pack.rs
gix-transport/: Cargo.toml
gix-transport/src/server/: mod.rs
gix-transport/tests/: blocking-server.rs
